# bootcamp-repo

./: .gitignore  LICENSE  README.md  sanitize.sh
01-api-gateway/: README-UI.md  README-hybrid.md  README-serverless.md  README.md
01-api-gateway/deck/: 01-services-and-routes.yaml  02-rate-limiting.yaml  03-proxy-cache.yaml  04-upstream.yaml  05-key-auth.yaml  06-jwt-auth.yaml  07-consumers.yaml  09-ip-restriction.yaml  10-correlation-id.yaml  11-request-transformer.yaml  12-response-transformer.yaml  13-http-log.yaml  14-consumer-groups-acl.yaml  15-kong-identity.yaml  16-oidc-auth-code-auth0.yaml  16-oidc-auth0.yaml  16-oidc-introspection-auth0.yaml  16-oidc-introspection-hybrid.yaml  16-oidc-introspection-serverless.yaml  16-oidc-introspection.yaml  16-oidc-keycloak-hybrid.yaml  (+3 more)
02-apiops/: .gitignore  README-UI.md  README.md
03-api-portal/: README.md
04-ai-gateway/: README-DECK.md  README-UI.md  README.md  docker-compose.yml
04-ai-gateway/services/ai-pii-service/: CHANGELOG.md  Dockerfile.local  README.md  pyproject.toml
04-ai-gateway/services/ai-pii-service/ai_pii_service/: nlp_engine_conf.yml
04-ai-gateway/services/ai-pii-service/tests/: test_api.py  test_stanza.py
05-mcp-a2a/: README-AUTH0.md  README-DECK.md  README-UI.md  README.md  docker-compose.yml  ngrok-mcp-guardrails.yml
ai-gateway/: README-DECK.md  README.md
ai-gateway/services/ai-compress-service/: CHANGELOG.md  Dockerfile.local  pyproject.toml
ai-gateway/services/ai-compress-service/tests/: test_server.py
api-gateway/: README-UI.md  README-hybrid.md  README-serverless.md  README.md
api-portal/: README.md
apiops/: README.md
keycloak/: docker-compose.yml  realm-bootcamp.json
mcp-a2a/: README-DECK.md  README.md  docker-compose.yml
(+98 files in other folders)
