[tool.poetry]
name = "ai-pii-service"
version = "1.0.0"
description = "An API service for anonymizing PII information"
authors = ["subnetmarco <marco@konghq.com>"]
readme = "README.md"
license = "Proprietary"
package-mode = false  # Disable package mode to prevent Poetry from trying to install the project as a package

[[tool.poetry.source]]
name = "pytorch-cpu-only"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
flask = "^3.1.3"
gunicorn = "^25"
tldextract = "^5.3"
presidio-analyzer = "2.2.361"
presidio-anonymizer = "2.2.361"
langdetect = "^1.0.9"
pyyaml = "6.0.3"
Faker = "^40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"

[tool.pytest.ini_options]
markers = [
    "turkish: tests for turkish with stanza",
    "thai: tests for thai with stanza",
    "korean: tests for korean with spacy",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
